--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "baas zunnaiyyer",
+  "name": "it will work",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,22 +11,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@gsap/react": "^2.1.2",
-    "gsap": "^3.13.0",
-    "quapp-sdk": "file:../quapp-sdk",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "qrcode-terminal": "^0.12.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.22.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "quapp": "^1.0.2",
-    "vite": "^6.3.1"
+    "@eslint/js": "^9.39.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "quapp": "^1.0.3",
+    "vite": "^7.2.2"
   }
 }
